fix overflow on nav items

--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -70,4 +70,8 @@ $header-height: 5rem;
   &.is-selected {
     border-bottom: solid 4px $dark-blue;
   }
+
+  .flag-and-name {
+    white-space: nowrap;
+  }
 }
